<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name"></string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_locations">Locations</string>
    <string name="title_activity_location_list">Locations</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_clear_location_list">Clear List</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!--Settings Activity Strings-->
    <string name="settings_name">Plan</string>
    <string name="settings_section1_name">Phase 01</string>
    <string name="settings_section2_name">Phase 02</string>
    <string name="settings_section3_name">Phase 03</string>

    <string name="settings_section1_action1">WiFi</string>
    <string name="settings_section1_action2">Bluetooth1</string>
    <string name="settings_section1_action3">Brightness</string>


    <string name="settings_section2_action1">Bluetooth2</string>
    <string name="settings_section2_action2">Screen Timeout</string>
    <string name="settings_section2_action3">Auto-Sync</string>
    <string name="settings_section2_action4">Action 04</string>
    <string name="settings_section2_action5">Action 05</string>
    <string name="settings_section2_action6">Action 06</string>

    <string name="settings_section3_action1">Action 01</string>
    <string name="settings_section3_action2">Action 02</string>
    <string name="settings_section3_action3">Action 03</string>
    <string name="settings_section3_action4">Action 04</string>
    <string name="settings_section3_action5">Action 05</string>
    <string name="settings_section3_action6">Action 06</string>

    <!--Settings Activity Timeout-->
    <string name="timeout_15s">15 seconds</string>
    <string name="timeout_30s">15 seconds</string>
    <string name="timeout_1m">1 minute</string>
    <string name="timeout_2m">2 minutes</string>
    <string name="timeout_10m">10 minutes</string>
    <string name="timeout_30m">30 minutes</string>



</resources>
